fix: ensure action bar stays visible at lower resultions
This commit ensures the contenful modal is rendered in a smaller iframe,
keeping the 0 bottom position from being outside of the view of the
rendered modal. Before this commit, the action bar on lower resolution
devices would dissappear.

--- a/src/components/Gallery/ImageGallery.css
+++ b/src/components/Gallery/ImageGallery.css
@@ -18,6 +18,7 @@
   overflow: hidden;
   overflow-y: scroll;
   padding: 0px 40px;
+  padding-bottom: 90px;
 }
 
 .ix-placeholder svg {
@@ -43,6 +44,6 @@
 @media (max-width: 880px) {
   .ix-gallery {
    grid-template-columns: repeat(3, 1fr);
-    padding-bottom: 150px;
+    padding-bottom: 90px;
   }
 }
